[gd_scene load_steps=5 format=2]

[ext_resource path="res://LevelOne.gd" type="Script" id=1]
[ext_resource path="res://PersonWithMask.tscn" type="PackedScene" id=2]
[ext_resource path="res://StaticRock.tscn" type="PackedScene" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -1.30595, 0.817566, 0, 0, 0, 0, 19.8833, -51.0961, 0, 0, 0, 0, 774.221, -38.3826, 0, 0, 0, 0, 799.648, -0.241913, 0, 0, 0, 0, 799.648, 600.474, 0, 0, 0, 0, 677.81, 699.004, 0, 0, 0, 0, 31.5374, 687.35, 0, 0, 0, 0, 1.87238, 600.474, 0, 0, 0, 0, -1.30595, 0.817566 )
}

[node name="LevelOne" type="Node"]
script = ExtResource( 1 )
PersonWithMaskPackage = ExtResource( 2 )

[node name="SpawnEnemyTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="WallContainer" type="Node" parent="."]

[node name="StaticRock" parent="WallContainer" instance=ExtResource( 3 )]
position = Vector2( 410.361, 365.287 )

[node name="StaticRock2" parent="WallContainer" instance=ExtResource( 3 )]
position = Vector2( 407.502, 239.947 )

[node name="StaticRock3" parent="WallContainer" instance=ExtResource( 3 )]
position = Vector2( 407.872, 301.995 )

[node name="InitPersonPath" type="Path2D" parent="."]
position = Vector2( -1.05948, 0 )
curve = SubResource( 1 )

[node name="InitPosition" type="PathFollow2D" parent="InitPersonPath"]
position = Vector2( -1.30595, 0.817566 )
rotation = -1.18327
[connection signal="timeout" from="SpawnEnemyTimer" to="." method="_on_SpawnEnemyTimer_timeout"]
